# fsi

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
cmake/: compile_options.cmake  package.cmake
include/fsi/: function_traits.hpp  type_erasure.hpp  type_traits.hpp  typelist.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_function_traits.cpp  test_type_erasure.cpp
